--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -40,6 +40,7 @@ changelog:
       - '^docs:'
       - '^test:'
       - '^skip-changelog:'
+      - '^chore:'
 
 # The lines beneath this are called `modelines`. See `:help modeline`
 # Feel free to remove those if you don't want/use them.
